@@ -699,6 +699,10 @@ auto-completeがクイックヘルプの表示にpos-tipによるネイティブ
 
 自動補完を開始するコマンドのパッケージを正規表現で指定します。
 
+### `ac-non-trigger-commands` ###
+
+自動補完を開始しないコマンドをシンボルのリストで指定します。
+
 ### `ac-trigger-commands` ###
 
 自動補完を開始するコマンドをシンボルのリストで指定します。`self-insert-command`がデフォルトですが、まれに文字の挿入を独自のコマンドに設定しているモードがあるので、その対応のための設定項目です。
